finished the coding stats area, progression bars now look apropriate on mobile and corrected.

--- a/style.css
+++ b/style.css
@@ -398,6 +398,26 @@ bubble{
         gap: 20px;
     }
 
+    .language-time-container{
+        flex-direction: column;
+        justify-content: left;
+        align-items:baseline;
+    }
+
+    .bar-box{
+        width: 100%;
+        height: 15px;
+    }
+
+    .bar{
+        width: 100%;
+        height: inherit;
+    }
+
+    .language-time-container h3{
+        flex: 0 0 10px;
+        margin-block: 10px;
+    }
 }
 
 
